fixed spacing

--- a/Portofolio Website/src/assets/main.css
+++ b/Portofolio Website/src/assets/main.css
@@ -89,7 +89,7 @@ nav {
 
 .navbar a {
   text-decoration: none;
-  font-size: large;
+  font-size: 20px;
   padding-right: 20px;
   color: #D3AE87;
 }
@@ -105,6 +105,7 @@ nav {
   justify-content: space-between;
   width: 100%;
   height: 200vh;
+  margin-top: 30px;
 }
 .container_row {
   display: flex;
